Prevent cutoff text

--- a/hfg-customization.css
+++ b/hfg-customization.css
@@ -166,6 +166,8 @@ a.ui-tag-button:visited:hover {
 .ui-thumbnail-meta-subtitle {
   color: var(--text);
   line-height: 1.2em;
+  height: 28px !important;
+  margin-top: .25em;
 }
 
 
